<!--Dylan Ashton n01442206 -->
<resources>
    <string name="app_name">DylanAshtonN01442206</string>
    <string name="DA2206">DylanAshtonN01442206</string>
    <string name="soa">Stay on app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">o</string>
    <string name="navigation_drawer_close">n</string>
    <string name="nav_drawer">Nav Drawer</string>
    <string name="home">Home</string>
    <string name="download">Download</string>
    <string name="weather">Weather</string>
    <string name="file">File</string>
    <string name="settings">Settings</string>
    <string name="shape">Shape</string>
    <string name="help">help</string>
    <string name="sweep">sweep</string>
    <string name="under_construction">Under construction</string>
    <string name="dylan">Dylan</string>
    <string name="ashton">Ashton</string>
    <string name="ashtonn01442206">AshtonN01442206</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
</resources>