<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_drawer" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/drawer_home"
                    android:title="@string/home"
                    android:icon="@drawable/ic_home"/>
                <item
                    android:id="@+id/drawer_download"
                    android:title="@string/download"
                    android:icon="@drawable/ic_download"/>
                <item
                    android:id="@+id/drawer_srv"
                    android:title="@string/weather"
                    android:icon="@drawable/ic_weather"/>
                <item
                    android:id="@+id/drawer_file"
                    android:title="@string/file"
                    android:icon="@drawable/ic_file"/>
                <item
                    android:id="@+id/drawer_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_cog"/>
                <item
                    android:id="@+id/drawer_shape"
                    android:title="@string/shape"
                    android:icon="@drawable/ic_star"/>
            </group>
        </menu>
    </item>

</menu>