<?xml version="1.0" encoding="utf-8"?>
<!--Dylan Ashton n01442206 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFrag"
    android:id="@+id/DylanSettingsFrag">


    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/red"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="25sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purple"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="25sp"
            android:layout_weight="0.13" />
         <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/blue"
         android:layout_gravity="center_horizontal"
         android:checked="false"
         android:textSize="25sp"
         android:layout_weight="0.13" />
    </RadioGroup>
    </FrameLayout>
